# packages/api/src/storage/dto/storage-location-input.dto.ts
@@ -15,6 +15,28 @@ export const storageLocationInputSchema = z.object({
   prefix: z.string().optional(),
 })
 
+// export const storageLocationInputSchema = z
+//   .object({
+//     storageProvisionId: z.string().uuid().optional(),
+//   })
+//   .or(
+//     z.object({
+//       accessKeyId: z.string().optional(),
+//       secretAccessKey: z.string().optional(),
+//       endpoint: z.string().optional(),
+//       bucket: z.string().optional(),
+//       region: z.string().optional(),
+//       prefix: z.string().optional(),
+//     }),
+//   )
+//   .or(
+//     z.object({
+//       userLocationId: z.string().uuid().optional(),
+//       userLocationBucketOverride: z.string().optional(),
+//       userLocationPrefixOverride: z.string().optional(),
+//     }),
+//   )
+
 export class StorageLocationInputDTO extends createZodDto(
   storageLocationInputSchema,
 ) {}
